--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,111 @@
 :root {
-  --primary-color: #f5f5f5;
-  --secondary-color: #f5f5f5;
+  --primary-color: #f0f0f0;
+  --secondary-color: #71aefd;
+  --background-color: #252525;
+  --grey-color: #f0f0f0;
 }
 
 body {
   display: grid;
   place-items: center;
-  justify-items: center;
+  place-content: center;
 
   height: 100vh;
+  text-align: center;
+  overflow: hidden;
+
+  h1 {
+    font-family: ff-nexus-typewriter, sans-serif;
+    font-size: clamp(2em, 7vw, 7em);
+    margin-bottom: 0.2em;
+  }
+
+  h2 {
+    font-family: ff-nexus-typewriter, sans-serif;
+    font-size: clamp(1.5em, 4vw, 3.25em);
+    margin-bottom: 0.5em;
+  }
+
+  p {
+    font-family: forma-djr-text, sans-serif;
+    font-size: 1.7em;
+  }
+}
+
+.underconst {
+  // background-color: white;
+  padding: 2rem;
+}
+
+.radlines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.underconst-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.underconst-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+
+.igor-img {
+  width: 12rem;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+
+.underconst-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.linkswrapper {
+  background-color: var(--grey-color);
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.contact-icon {
+  width: 5rem;
+  margin: 0 0.7rem;
+}
+
+.shape {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  transform: scale(0.9);
+  z-index: -1;
+  animation: rotation 20s infinite ease-in-out;
+}
+
+@keyframes rotation {
+  0% {
+    rotate: 0deg;
+    transform: translate(0, 0);
+  }
+  50% {
+    rotate: 360deg;
+    transform: translate(-50%, -50%);
+  }
+  100% {
+    rotate: 0deg;
+    transform: translate(0, 0);
+  }
 }
