--- a/src/style.scss
+++ b/src/style.scss
@@ -16,25 +16,20 @@ body {
 
   h1 {
     font-family: ff-nexus-typewriter, sans-serif;
-    font-size: clamp(2em, 7vw, 7em);
+    font-size: clamp(3em, 7vw, 7em);
     margin-bottom: 0.2em;
   }
 
   h2 {
     font-family: ff-nexus-typewriter, sans-serif;
-    font-size: clamp(1.5em, 4vw, 3.25em);
+    font-size: clamp(1.7em, 4vw, 3.25em);
     margin-bottom: 0.5em;
   }
 
   p {
     font-family: forma-djr-text, sans-serif;
-    font-size: 1.7em;
+    font-size: clamp(1.3em, 3vw, 1.7em);
   }
-}
-
-.underconst {
-  // background-color: white;
-  padding: 2rem;
 }
 
 .radlines {
@@ -52,6 +47,10 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .underconst-subtitle {
@@ -100,7 +99,7 @@ body {
   z-index: -1;
   animation: rotation 20s infinite ease-in-out;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 800px) {
     display: none;
   }
 }
